--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron",
-      "schedule": "0 0 19 * * 1-5"
+      "schedule": "0 19 * * 1-5"
     }
   ]
 }
